Bug 1461635 - Enforce a minimum widget size of 1x1 for toolbar separators. r=spohl, a=RyanVM

MozReview-Commit-ID: Gc5TC5DGUI

--HG--
extra : source : eedb9180bc3b62eb39e6b1221a355282d1b40149